# HLE-human-leaderboard

./: .env.example  .gitignore  README.md  init.py  pyproject.toml  quickrun.md  viral.md
docs/: QUICKSTART.md  viral_plan.md
hle_pipeline/: .gitignore  quiz_requirements.txt
hle_pipeline/core/: database_manager.py  hle_database_loader.py
hle_pipeline/scripts/: init_db.py  setup_hf_token.py
mcp_server/: .env.example  mcp_hle_server.py  requirements.txt
prototype1/: .env  mcp_hle_server.py
scripts/: run_server.sh  setup.sh
